# cTifixity

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindArgp.cmake
src/: tiffdatacs.c  tifixityConfig.h.in
